about-employee-pic class is chenged

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="container">
                 <h1>Nasi specjaliści</h1>
                 <div class="about-employee">
-                    <div class="about-employee-pic"></div>
+                    <div class="about-employee-pic-woman"></div>
                     <div class="about-employee-desc">
                         <h2>Imię Nazwisko [dział]</h2>
                         <p>
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div class="about-employee">
-                    <div class="about-employee-pic"></div>
+                    <div class="about-employee-pic-man"></div>
                     <div class="about-employee-desc">
                         <h2>Imię Nazwisko [dział]</h2>
                         <p>
